manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: teamx
  labels:
    app: backend
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: backend
  type: ClusterIP
