manifests/backend/unified-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  namespace: teamx
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:205930621170:certificate/3f2cb82c-1a79-4f0f-8809-b00b53487dc3
    alb.ingress.kubernetes.io/group.name: common
    alb.ingress.kubernetes.io/group.order: '110'
    # WebSocket対応の設定
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=lb_cookie,stickiness.lb_cookie.duration_seconds=86400
    alb.ingress.kubernetes.io/websocket-protocol: 'true'
    # WebSocketのタイムアウト設定
    alb.ingress.kubernetes.io/idle-timeout-seconds: '3600'
spec:
  ingressClassName: alb
  rules:
  - host: teamx-app.pdcc.paas.jp
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  tls:
  - hosts:
    - teamx-app.pdcc.paas.jp
